[project]
name = "p-email-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "aiosignal>=1.3.2",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "attrs>=25.2.0",
    "faker>=37.1.0",
    "fastapi>=0.115.12",
    "frozenlist>=1.5.0",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "multidict>=6.1.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sendgrid>=6.10.0",
    "uvicorn>=0.34.0",
    "yarl>=1.18.3",
]
